[package]
name = "luau-lexer"
description = "A lexer for the luau language."
version = "0.2.94"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["luau", "lexer"]

documentation = "https://docs.rs/luau-lexer"
repository = "https://github.com/msix29/luau-lexer"
homepage = "https://github.com/msix29/luau-lexer"

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
smol_str = "0.3.2"

[features]
serde = ["dep:serde","smol_str/serde"]
owned-input = []
